--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,12 @@ djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
 gunicorn==20.1.0
+mysqlclient==2.2.4
 pillow==10.2.0
+psycopg==3.1.18
+psycopg2==2.9.9
 PyJWT==1.7.1
 pytz==2024.1
 sqlparse==0.4.4
+typing_extensions==4.10.0
 tzdata==2024.1
